k8s/apps/epimac/fleet-front/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fleet
  template:
    metadata:
      labels:
        component: fleet
    spec:
      imagePullSecrets:
        - name: gitlab-epita-dockerconfig
      containers:
        - name: app
          image: gastbob40/epimac-fleet
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      securityContext:
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - fleet
                    - key: component
                      operator: In
                      values:
                        - fleet
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: test
          emptyDir: {}
