k8s/apps/epimac/fleet-front/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "fleet-epimac-ingress"
  namespace: "epimac"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "fleet.epimac.org"
      secretName: "fleet-epimac-ingress-cert-secret"
  rules:
    - host: "fleet.epimac.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "fleet"
                port:
                  number: 3000
